# bedrock-server-manager

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  build.bat  build.sh  docker-entrypoint.sh  pre-commit-config.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-labeler.yml  build-test.yml  pages.yml  pr-labeler.yml  publish.yml
docs/: CHANGELOG.md  EXTRAS.md  PLUGIN_API.md  api.rst  cli.rst  conf.py  core.rst  core_functions.rst  index.rst  modules.rst  public_classes.rst
docs/_manual_docs/: general.md
docs/source/: changelog.md  conf.py  index.rst
frontend/: eslint.config.js  package-lock.json  package.json
frontend/legacy/: eslint.config.js  jest.config.js  package-lock.json  package.json
frontend/src/: account.js  allowlist.js  allowlist_api.js  auth.js  auth_api.js  backup_restore.js  content_management.js  dashboard.js  install_config.js  main.js  manage_plugins.js  manage_settings.js  monitor_usage.js  query_param_handler.js  register.js  server_actions.js  server_settings.js  setup.js  sidebar_nav.js  ui_utils.js  users.js  utils.js  websocket_client.js
frontend/v2/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
plugins/: api_docs_generator.py  custom_event_loop_test.py  example_extensions_plugin.py  nested_seperate_server_test.py  ping_plugin.py  pong_plugin.py  recursive_loop_test.py
plugins/event_sender_plugin/: __init__.py
src/bedrock_server_manager/: __init__.py  __main__.py  app_context.py  context.py  instances.py  logging.py
test/: conftest.py  test_context.py  test_instances.py  test_logging.py  test_main_module.py
test/api/: test_addon.py  test_api_backup_restore.py  test_api_settings.py  test_api_utils.py  test_info.py  (+9 more)
tests/: conftest.py  test_context.py  test_logging.py  test_main_module.py  test_setup_security.py
tests_v2/: conftest.py  test_error.py
(+512 files in other folders)
