[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-server-manager"
version = "3.5.0a1"
authors = [
  { name="DMedina559", email="dmedina559-github@outlook.com" },
]
description = "A manager for Minecraft Bedrock Dedicated Servers"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
	"Environment :: Console",
	"Topic :: Games/Entertainment",
]

dependencies = [
    "requests >= 2.32.3",
    "psutil >= 7.0.0",
    'pywin32 >= 309; sys_platform == "win32"',
    "click >= 3.2.0",
    "questionary >= 2.1.0",
    "fastapi >= 0.111.0",
    "uvicorn[standard] >= 0.29.0",
    "python-jose[cryptography] >= 3.3.0",
    "jinja2 >= 3.1.0"
]

keywords = ["minecraft", "bedrock", "server", "manager", "bsm", "admin", "dashboard", "web", "cli", "web", "fastapi"]

[project.urls]
Repository = "https://github.com/dmedina559/bedrock-server-manager.git"
"Bug Tracker" = "https://github.com/DMedina559/bedrock-server-manager/issues"
Changelog = "https://github.com/DMedina559/bedrock-server-manager/blob/main/docs/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "sphinx",
    "sphinx-click"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bedrock_server_manager*"]

[project.scripts]
bedrock-server-manager = "bedrock_server_manager.__main__:main"

[tool.setuptools.package-data]
"bedrock_server_manager.web" = [
    "templates/**/*",
    "static/**/*"
]

[tool.pytest.ini_options]
testpaths = [".test"]